log
Wed 27 Mar 2024 08:25:09 PM UTC: 
 tests:  0|6
total_score: 0/70
8be6a7e
Wed 27 Mar 2024 08:30:02 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:10: error: unused variable ‘new’ [-Werror=unused-variable]
   33 |   List * new = (List *)malloc(sizeof(List));
      |          ^~~
list.c:38:1: error: control reaches end of non-void function [-Werror=return-type]
   38 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bdf6e2c
Wed 27 Mar 2024 08:31:17 PM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
8f96494
